# o1

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  Taskfile.yml
.github/workflows/: build.yml
adr/: 0000-design-to-support-for-compile-time-and-run-time-hash-table-construction.md  0001-const-constructors.md  0002-split-the-project-into-multiple-crates.md  template.md
o1/: Cargo.toml
o1/src/: lib.rs
o1/src/fks/: core.rs  drop.rs  hash_map.rs
o1/src/fks/ctors/: mod.rs  new.rs  new_const.rs
o1/src/hashing/: common.rs  flawed.rs  mod_prime.rs  multiply_shift.rs  polynomial.rs
o1/src/hashing/hashers/: mod.rs
o1/src/hashing/hashers/msp/: bigint.rs  core.rs  int64.rs  mod.rs  option.rs  smallint.rs  string.rs
o1/src/hashing/hashers/xxh3/: bigint.rs  core.rs  int64.rs  mod.rs  option.rs  smallint.rs  string.rs
o1/src/utils/: bit_array.rs  bit_hacks.rs  const_hacks.rs  mod.rs
o1_core/: Cargo.toml
o1_core/src/: core.rs  lib.rs
o1_test/: Cargo.toml  Taskfile.yml
o1_test/src/: data.rs.tpl  hasher.rs  map.rs
o1_testing/: Cargo.toml
o1_testing/src/: equivalence.rs  generate.rs  hasher.rs  lib.rs  map.rs  stat.rs
scripts/: gen_map_test_data.py
src/: core.rs  error.rs  lib.rs
src/fks/: core.rs  ctors.rs  drop.rs  hash_map.rs  mod.rs
src/fks/ctors/: new.rs  new_const.rs
src/hashing/: common.rs  flawed.rs  mod.rs  mod_prime.rs  multiply_shift.rs  polynomial.rs
src/hashing/hashers/: mod.rs
src/hashing/hashers/msp/: bigint.rs  core.rs  int64.rs  smallint.rs  string.rs
src/random/: mod.rs  xorshift.rs
src/testing/: data.rs  data.rs.tpl  equivalence.rs  generate.rs  map.rs  mod.rs  stat.rs  utils.rs
src/utils/: bit_array.rs  maybe_owned_slice.rs  mod.rs  xorshift.rs
