[package]
name = "o1"
version = "0.0.1-alpha.2"
edition = "2021"

[features]
_slow-tests = []

[dependencies]
rand = "~0.9.0"
rand_xoshiro = "~0.7.0"
bitvec = "~1.0.1"
thiserror = "2.0.11"

[dev-dependencies]
rand_chacha = "~0.9.0"
ndarray = "~0.16.1"
num-traits = "~0.2.19"
statrs = "~0.18.0"
compose-idents = "~0.0.3"

[lints.clippy]
doc_overindented_list_items = "allow"
