[workspace]
members = ["o1_core", "o1_testing", "o1"]
resolver = "2"

[workspace.package]
version = "0.0.1-alpha.4"
edition = "2021"

[workspace.dependencies]
o1_core = { path = "o1_core", version = "0.0.1-alpha.4" }
o1_testing = { path = "o1_testing", version = "0.0.1-alpha.4" }
rand = "~0.9.0"
compose-idents = "~0.0.7"

[workspace.lints.clippy]
doc_overindented_list_items = "allow"
print_stderr = "deny"
print_stdout = "deny"
