[package]
name = "o1"
version.workspace = true
edition.workspace = true

[features]
_slow-tests = []

[dependencies]
o1_core.workspace = true
rand.workspace = true
compose-idents.workspace = true
rand_chacha.workspace = true
rand_xoshiro = "~0.7.0"
bitvec = "~1.0.1"

[dev-dependencies]
o1_testing.workspace = true

[lints]
workspace = true
