[package]
name = "o1"
version.workspace = true
edition.workspace = true

[features]
xxh3 = ["dep:xxhash-rust"]
# Internal features.
_slow-tests = []

[dependencies]
o1_core.workspace = true
rand.workspace = true
compose-idents.workspace = true
rand_chacha.workspace = true
rand_xoshiro = "~0.7.0"
bitvec = "~1.0.1"
xxhash-rust = { version = "~0.8.0", optional = true, features = ["xxh3", "const_xxh3"] }

[dev-dependencies]
o1_testing.workspace = true

[lints]
workspace = true
